@@ -56,6 +56,8 @@ New features and other changes:
 44. Added Set-ServerConfig and associated config file settings.
 45. Added Get-UserGroup.
 46. Added Get-HomeDrive, Mount-HomeDrive, and Open-HomeDrive.
+47. Added Register-NotificationApp.
+48. Added WSTools_GUI.ps1 and WSTools.ico files. *NOT FUNCTIONAL YET**
 
 Removed items:
 1. Get-202001UpdateStatus: We are in August 2020 now so if computers don't have newer cumulative updates there is a problem.
